--- a/hw/misc/Makefile.objs
+++ b/hw/misc/Makefile.objs
@@ -34,6 +34,7 @@ obj-$(CONFIG_IMX) += imx6_ccm.o
 obj-$(CONFIG_IMX) += imx6_src.o
 obj-$(CONFIG_MILKYMIST) += milkymist-hpdmc.o
 obj-$(CONFIG_MILKYMIST) += milkymist-pfpu.o
+obj-$(CONFIG_MRF) += mrf_core.o mrf_evr.o mrf_pci.o mrf_evg.o
 obj-$(CONFIG_MAINSTONE) += mst_fpga.o
 obj-$(CONFIG_OMAP) += omap_clk.o
 obj-$(CONFIG_OMAP) += omap_gpmc.o
